# one_easy_protocol_pkg

./: CMakeLists.txt  CMakeLists.txt.autosave  README.md  package.xml
.github/workflows/: action.yml
scripts/: one_ctrl_node.py  one_ctrl_node.py.autosave
scripts/one_easy_protocol_pkg/: __init__.py  one_ctrl_node.py
srv/: Light.srv  Move.srv  RobotExtMotor.srv  RobotGripper.srv
